--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Inspired by this article on Smashing Magazine - http://coding.smashingmagazine.com/2011/10/04/quick-look-math-animations-javascript/
 
-Take a look at the animations I have so far here: http://vyder.github.com/animate-all-the-things/
+Animations so far here: http://vyder.github.com/animate-all-the-things/
 
